# upsft

./: .gitignore  .graphifyignore  .prettierignore  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  clippy.toml  dist-workspace.toml  lint-staged.config.cjs  package.json  pnpm-lock.yaml  rust-toolchain.toml  sample.config.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  check.yml  release.yaml  release.yml
.pi/agent/: AGENT.md
scripts/: changelog.ts  release.ts  tag.ts  utils.ts
src/: cli.rs  cmd.rs  config.rs  deps.rs  error.rs  exec.rs  execute.rs  lib.rs  main.rs  util.rs
src/error/: mod.rs
src/errors/: config.rs
src/exec/: mod.rs  runner.rs  shell.rs
src/util/: fs.rs
