[package]
name = "upsft"
edition = "2024"
version = "0.0.3"
description = "A simple CLI tool to update multiple dependencies"       
license = "MIT" 
repository = "https://github.com/devharshthakur/upsft"                   
readme = "README.md"  

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[profile.release]
lto = "fat"
codegen-units = 1

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
cliclack = "0.5.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing = { version = "0.1.44", features = ["log"] }
