[package]
name = "upsft"
edition = "2024"
version = "1.1.2"
rust-version = "1.85"
description = "A simple CLI tool to update multiple dependencies"       
license = "MIT" 
repository = "https://github.com/devharshthakur/upsft" 
homepage = "https://github.com/devharshthakur/upsft"                  
readme = "README.md"  

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"
debug = 1
strip = false

[lints.rust]
unexpected_cfgs = "warn"

[lints.clippy]
# Rust skills recommended lints (all default, made explicit)
perf = "warn"
style = "warn"
correctness = "deny"
suspicious = "warn"
complexity = "warn"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
home = "0.5.12"
thiserror = "2.0.18"
toml = { version = "1.1.2", features = ["preserve_order"] }
